DSVS/npm/dualsoft-parser/src/exprParser.ts
// Generated from ../../../Grammar/g4s/expr.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { exprListener } from "./exprListener";
import { exprVisitor } from "./exprVisitor";


export class exprParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly WS = 63;
	public static readonly BLOCK_COMMENT = 64;
	public static readonly LINE_COMMENT = 65;
	public static readonly TAG = 66;
	public static readonly IDENTIFIER = 67;
	public static readonly SINGLE = 68;
	public static readonly DOUBLE = 69;
	public static readonly SBYTE = 70;
	public static readonly BYTE = 71;
	public static readonly INT16 = 72;
	public static readonly UINT16 = 73;
	public static readonly INT32 = 74;
	public static readonly UINT32 = 75;
	public static readonly INT64 = 76;
	public static readonly UINT64 = 77;
	public static readonly CHAR = 78;
	public static readonly STRING = 79;
	public static readonly LPAREN = 80;
	public static readonly RPAREN = 81;
	public static readonly LBACKET = 82;
	public static readonly RBACKET = 83;
	public static readonly PLUS = 84;
	public static readonly MINUS = 85;
	public static readonly TIMES = 86;
	public static readonly DIV = 87;
	public static readonly GT = 88;
	public static readonly LT = 89;
	public static readonly EQ = 90;
	public static readonly POINT = 91;
	public static readonly POW = 92;
	public static readonly RULE_comment = 0;
	public static readonly RULE_identifier = 1;
	public static readonly RULE_tag = 2;
	public static readonly RULE_storage = 3;
	public static readonly RULE_functionName = 4;
	public static readonly RULE_terminal = 5;
	public static readonly RULE_literal = 6;
	public static readonly RULE_literalSingle = 7;
	public static readonly RULE_literalDouble = 8;
	public static readonly RULE_literalSbyte = 9;
	public static readonly RULE_literalByte = 10;
	public static readonly RULE_literalInt16 = 11;
	public static readonly RULE_literalUint16 = 12;
	public static readonly RULE_literalInt32 = 13;
	public static readonly RULE_literalUint32 = 14;
	public static readonly RULE_literalInt64 = 15;
	public static readonly RULE_literalUint64 = 16;
	public static readonly RULE_literalChar = 17;
	public static readonly RULE_literalString = 18;
	public static readonly RULE_literalBool = 19;
	public static readonly RULE_toplevels = 20;
	public static readonly RULE_toplevel = 21;
	public static readonly RULE_statement = 22;
	public static readonly RULE_assign = 23;
	public static readonly RULE_normalAssign = 24;
	public static readonly RULE_risingAssign = 25;
	public static readonly RULE_fallingAssign = 26;
	public static readonly RULE_varDecl = 27;
	public static readonly RULE_storageName = 28;
	public static readonly RULE_type = 29;
	public static readonly RULE_timerDecl = 30;
	public static readonly RULE_timerType = 31;
	public static readonly RULE_timerName = 32;
	public static readonly RULE_counterDecl = 33;
	public static readonly RULE_counterType = 34;
	public static readonly RULE_counterName = 35;
	public static readonly RULE_copyStatement = 36;
	public static readonly RULE_copyCondition = 37;
	public static readonly RULE_copySource = 38;
	public static readonly RULE_copyTarget = 39;
	public static readonly RULE_expr = 40;
	public static readonly RULE_arguments = 41;
	public static readonly RULE_exprList = 42;
	public static readonly RULE_unaryOperator = 43;
	public static readonly RULE_binaryOperatorMultiplicative = 44;
	public static readonly RULE_binaryOperatorAdditive = 45;
	public static readonly RULE_binaryOperatorBitwiseShift = 46;
	public static readonly RULE_binaryOperatorRelational = 47;
	public static readonly RULE_binaryOperatorEquality = 48;
	public static readonly RULE_binaryOperatorBitwiseAnd = 49;
	public static readonly RULE_binaryOperatorBitwiseXor = 50;
	public static readonly RULE_binaryOperatorBitwiseOr = 51;
	public static readonly RULE_binaryOperatorLogicalAnd = 52;
	public static readonly RULE_binaryOperatorLogicalOr = 53;
	public static readonly RULE_binaryOperator = 54;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"comment", "identifier", "tag", "storage", "functionName", "terminal", 
		"literal", "literalSingle", "literalDouble", "literalSbyte", "literalByte", 
		"literalInt16", "literalUint16", "literalInt32", "literalUint32", "literalInt64", 
		"literalUint64", "literalChar", "literalString", "literalBool", "toplevels", 
		"toplevel", "statement", "assign", "normalAssign", "risingAssign", "fallingAssign", 
		"varDecl", "storageName", "type", "timerDecl", "timerType", "timerName", 
		"counterDecl", "counterType", "counterName", "copyStatement", "copyCondition", 
		"copySource", "copyTarget", "expr", "arguments", "exprList", "unaryOperator", 
		"binaryOperatorMultiplicative", "binaryOperatorAdditive", "binaryOperatorBitwiseShift", 
		"binaryOperatorRelational", "binaryOperatorEquality", "binaryOperatorBitwiseAnd", 
		"binaryOperatorBitwiseXor", "binaryOperatorBitwiseOr", "binaryOperatorLogicalAnd", 
		"binaryOperatorLogicalOr", "binaryOperator",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'$'", "'true'", "'false'", "';'", "':='", "'ppulse'", "'npulse'", 
		"'int8'", "'sbyte'", "'uint8'", "'byte'", "'int16'", "'short'", "'word'", 
		"'uint16'", "'ushort'", "'int32'", "'int'", "'dword'", "'uint32'", "'uint'", 
		"'int64'", "'long'", "'uint64'", "'ulong'", "'double'", "'float64'", "'single'", 
		"'float32'", "'float'", "'char'", "'string'", "'bool'", "'boolean'", "'ton'", 
		"'tof'", "'rto'", "'ctu'", "'ctd'", "'ctud'", "'ctr'", "'copyIf'", "','", 
		"'!'", "'~'", "'~~~'", "'%'", "'<<'", "'<<<'", "'>>'", "'>>>'", "'>='", 
		"'<='", "'!='", "'<>'", "'&'", "'&&&'", "'^^^'", "'|'", "'|||'", "'&&'", 
		"'||'", undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'('", "')'", "'['", "']'", 
		"'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'='", "'.'", "'^'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"WS", "BLOCK_COMMENT", "LINE_COMMENT", "TAG", "IDENTIFIER", "SINGLE", 
		"DOUBLE", "SBYTE", "BYTE", "INT16", "UINT16", "INT32", "UINT32", "INT64", 
		"UINT64", "CHAR", "STRING", "LPAREN", "RPAREN", "LBACKET", "RBACKET", 
		"PLUS", "MINUS", "TIMES", "DIV", "GT", "LT", "EQ", "POINT", "POW",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(exprParser._LITERAL_NAMES, exprParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return exprParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "expr.g4"; }

	// @Override
	public get ruleNames(): string[] { return exprParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return exprParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(exprParser._ATN, this);
	}
	// @RuleVersion(0)
	public comment(): CommentContext {
		let _localctx: CommentContext = new CommentContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, exprParser.RULE_comment);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			_la = this._input.LA(1);
			if (!(_la === exprParser.BLOCK_COMMENT || _la === exprParser.LINE_COMMENT)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, exprParser.RULE_identifier);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.match(exprParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public tag(): TagContext {
		let _localctx: TagContext = new TagContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, exprParser.RULE_tag);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this.match(exprParser.TAG);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public storage(): StorageContext {
		let _localctx: StorageContext = new StorageContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, exprParser.RULE_storage);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.match(exprParser.T__0);
			this.state = 117;
			this.storageName();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionName(): FunctionNameContext {
		let _localctx: FunctionNameContext = new FunctionNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, exprParser.RULE_functionName);
		try {
			this.state = 121;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case exprParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 119;
				this.identifier();
				}
				break;
			case exprParser.T__46:
			case exprParser.T__47:
			case exprParser.T__48:
			case exprParser.T__49:
			case exprParser.T__50:
			case exprParser.T__51:
			case exprParser.T__52:
			case exprParser.T__53:
			case exprParser.T__54:
			case exprParser.T__55:
			case exprParser.T__56:
			case exprParser.T__57:
			case exprParser.T__58:
			case exprParser.T__59:
			case exprParser.T__60:
			case exprParser.T__61:
			case exprParser.PLUS:
			case exprParser.MINUS:
			case exprParser.TIMES:
			case exprParser.DIV:
			case exprParser.GT:
			case exprParser.LT:
			case exprParser.EQ:
			case exprParser.POW:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 120;
				this.binaryOperator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public terminal(): TerminalContext {
		let _localctx: TerminalContext = new TerminalContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, exprParser.RULE_terminal);
		try {
			this.state = 126;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case exprParser.T__0:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 123;
				this.storage();
				}
				break;
			case exprParser.TAG:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 124;
				this.tag();
				}
				break;
			case exprParser.T__1:
			case exprParser.T__2:
			case exprParser.SINGLE:
			case exprParser.DOUBLE:
			case exprParser.SBYTE:
			case exprParser.BYTE:
			case exprParser.INT16:
			case exprParser.UINT16:
			case exprParser.INT32:
			case exprParser.UINT32:
			case exprParser.INT64:
			case exprParser.UINT64:
			case exprParser.CHAR:
			case exprParser.STRING:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 125;
				this.literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, exprParser.RULE_literal);
		try {
			this.state = 141;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case exprParser.SINGLE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 128;
				this.literalSingle();
				}
				break;
			case exprParser.DOUBLE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 129;
				this.literalDouble();
				}
				break;
			case exprParser.SBYTE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 130;
				this.literalSbyte();
				}
				break;
			case exprParser.BYTE:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 131;
				this.literalByte();
				}
				break;
			case exprParser.INT16:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 132;
				this.literalInt16();
				}
				break;
			case exprParser.UINT16:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 133;
				this.literalUint16();
				}
				break;
			case exprParser.INT32:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 134;
				this.literalInt32();
				}
				break;
			case exprParser.UINT32:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 135;
				this.literalUint32();
				}
				break;
			case exprParser.INT64:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 136;
				this.literalInt64();
				}
				break;
			case exprParser.UINT64:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 137;
				this.literalUint64();
				}
				break;
			case exprParser.CHAR:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 138;
				this.literalChar();
				}
				break;
			case exprParser.STRING:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 139;
				this.literalString();
				}
				break;
			case exprParser.T__1:
			case exprParser.T__2:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 140;
				this.literalBool();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalSingle(): LiteralSingleContext {
		let _localctx: LiteralSingleContext = new LiteralSingleContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, exprParser.RULE_literalSingle);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 143;
			this.match(exprParser.SINGLE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalDouble(): LiteralDoubleContext {
		let _localctx: LiteralDoubleContext = new LiteralDoubleContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, exprParser.RULE_literalDouble);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.match(exprParser.DOUBLE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalSbyte(): LiteralSbyteContext {
		let _localctx: LiteralSbyteContext = new LiteralSbyteContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, exprParser.RULE_literalSbyte);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this.match(exprParser.SBYTE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalByte(): LiteralByteContext {
		let _localctx: LiteralByteContext = new LiteralByteContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, exprParser.RULE_literalByte);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this.match(exprParser.BYTE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalInt16(): LiteralInt16Context {
		let _localctx: LiteralInt16Context = new LiteralInt16Context(this._ctx, this.state);
		this.enterRule(_localctx, 22, exprParser.RULE_literalInt16);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(exprParser.INT16);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalUint16(): LiteralUint16Context {
		let _localctx: LiteralUint16Context = new LiteralUint16Context(this._ctx, this.state);
		this.enterRule(_localctx, 24, exprParser.RULE_literalUint16);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 153;
			this.match(exprParser.UINT16);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalInt32(): LiteralInt32Context {
		let _localctx: LiteralInt32Context = new LiteralInt32Context(this._ctx, this.state);
		this.enterRule(_localctx, 26, exprParser.RULE_literalInt32);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			this.match(exprParser.INT32);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalUint32(): LiteralUint32Context {
		let _localctx: LiteralUint32Context = new LiteralUint32Context(this._ctx, this.state);
		this.enterRule(_localctx, 28, exprParser.RULE_literalUint32);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this.match(exprParser.UINT32);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literalInt64(): LiteralInt64Context {
